# legged_control

SD05-20260506/: CMakeLists.txt  package.xml
SD05-20260506/launch/: display.launch  gazebo.launch
SD05-20260506/meshes/: FL_calf_Link.STL  FL_foot_Link.STL  FL_hip_Link.STL  FL_thigh_Link.STL  FR_calf_Link.STL  FR_foot_Link.STL  FR_hip_Link.STL  RL_calf_Link.STL  RL_foot_Link.STL  RL_hip_Link.STL  RL_thigh_Link.STL  RR_calf_Link.STL  RR_foot_Link.STL  RR_hip_Link.STL  RR_thigh_Link.STL
SD05-20260506/urdf/: SD05-20260506.csv  SD05-20260506.urdf  SD05-20260506_collision_v1.urdf
docker/ros1/: Dockerfile
docs/: ros2_migration_notes.md
legged_controllers/config/wl/: reference.info  task.info
legged_controllers/launch/: load_controller.launch
legged_examples/legged_wl/legged_wl_description/: CMakeLists.txt  package.xml
legged_examples/legged_wl/legged_wl_description/launch/: empty_world.launch  load_controller.launch  rviz.launch
legged_examples/legged_wl/legged_wl_description/rviz/: legged_robot_wl.rviz
legged_examples/legged_wl/legged_wl_description/urdf/: wl.urdf
legged_gazebo/src/: LeggedHWSim.cpp
scripts/: docker_build_ros1.sh  docker_launch_ros1.sh  legged_control_ros1.sh  legged_control_teleop.py
