<?xml version="1.0"?>
<package format="2">
    <name>legged_wl_description</name>
    <version>0.0.0</version>
    <description>WL robot description files</description>

    <maintainer email="wl@example.com">wl</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>xacro</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
</package>
